Introduced ConfigGenerator. Used to generate mappack config